<resources>
    <string name="app_name">rs.raf.jun.nikola_grujic_rn2419</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_bottom_nav">Main Screen</string>
    <string name="title_discover">Discover</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_profile">Profile</string>
    <string name="popular_stocks">Popular stocks</string>
    <string name="news">News</string>
    <string name="email">Email:</string>
    <string name="profile_image">Profile image</string>
    <string name="username">Username:</string>
    <string name="log_out">Log out</string>
    <string name="current_value">Current value</string>
    <string name="symbol">Symbol</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="open">OPEN</string>
    <string name="bid">BID</string>
    <string name="close">CLOSE</string>
    <string name="ebit">EBIT</string>
    <string name="sharp">SHARP</string>
    <string name="ask">ASK</string>
    <string name="beta">BETA</string>
    <string name="mkt_cap">MKT CAP</string>
    <string name="eps">EPS</string>
    <string name="alpha">ALPHA</string>
    <string name="currency">Currency</string>
    <string name="buy_shares">Buy shares</string>
    <string name="sell_all_shares">Sell all shares</string>
    <string name="enter_a_cash_amount">Enter a cash amount</string>
    <string name="enter_number_of_shares">Enter number of shares</string>
    <string name="bought_stocks">Bought stocks</string>
    <string name="no_bought_stocks">No bought stocks</string>
</resources>